[metadata]
name = scicm
version = 1.0.5
description = Science Colour Maps is a small package containing several colour maps created using viscm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MBravoS/scicm
author = Matías A. Bravo Santa Cruz
author_email = matias.bravo@icrar.org
license = BSD-3-Clause

[options]
packages = scicm
install_requires =
    requests
#    importlib
#    python_version >= 3.0
    matplotlib >= 3.7
    setuptools >= 45.0.0
include_package_data = True
